# unreflectanything-batch

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.ja.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_app.bat  run_batch_example.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: README.md  make_demo.py
scripts/: setup_env.ps1
src/: __init__.py  image_io.py  logger.py  metrics.py  preview.py  realityscan.py  unreflect_batch.py
tests/: conftest.py  test_ab_sets.py  test_image_io.py  test_logger.py  test_metrics.py  test_modes.py  test_preview.py  test_realityscan.py
tools/: ab_3dgs.py  ab_colmap.py  make_ab_sets.py  make_colmap_masks.py  make_realityscan_masks.py
