[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unreflectanything-batch"
version = "0.2.0"
description = "ReflectMask for RealityScan - generate tight binary alignment masks that exclude specular reflections, protecting valid features for high-detail RealityScan/COLMAP photogrammetry. UnReflectAnything is the reflection-detection backend. (repo/package name kept: unreflectanything-batch)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Toru Hashimoto" }]
keywords = ["realityscan", "alignment-mask", "photogrammetry", "reflection-removal",
            "highlight-removal", "colmap", "3d-gaussian-splatting", "unreflectanything"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Multimedia :: Graphics",
]

# NOTE: torch / torchvision are intentionally NOT listed here. On Windows the default
# PyPI torch wheel is CPU-only, and Blackwell (sm_120) needs the CUDA build. Install
# them FIRST from the PyTorch index (see README "2. Setup"):
#   pip install torch==2.9.1 torchvision==0.24.1 --index-url https://download.pytorch.org/whl/cu128
dependencies = [
  "unreflectanything==1.1.1",
  # Pinned transformers commit required by the checkpoint (see README trap #2).
  "transformers @ https://github.com/huggingface/transformers/archive/2fe43376cdde02b7ffcf117e6eb9aa4375fb2dd1.zip",
  "piexif==1.1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
gui = ["streamlit>=1.40"]
dev = ["pytest>=7", "pillow", "numpy"]

[project.scripts]
reflectmask = "main:main"
unreflect-batch = "main:main"

[project.urls]
Homepage = "https://github.com/toruhashimoto/unreflectanything-batch"
Issues = "https://github.com/toruhashimoto/unreflectanything-batch/issues"

[tool.setuptools]
py-modules = ["main"]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
